@@ -8,7 +8,7 @@ plugins {
 }
 
 group 'com.motompro'
-version '1.0-SNAPSHOT'
+version '1.0.0'
 
 repositories {
     mavenCentral()
@@ -21,7 +21,7 @@ ext {
 sourceCompatibility = '17'
 targetCompatibility = '17'
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
 
@@ -51,12 +51,22 @@ test {
     useJUnitPlatform()
 }
 
-jlink {
-    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-    launcher {
-        name = 'app'
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.motompro.filesrenamer.MainKt'
     }
+    into 'resources', {
+        from 'resources'
+    }
+    from {
+        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+        configurations.compileClasspath.collect { if (it.isDirectory()) it else zipTree(it) }
+    }
+}
+
+jlink {
+    imageZip.set(project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip"))
+    options.set(['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages', '--module-path', "${System.getenv("JMOD_HOME")}", "--add-modules", "javafx.controls,javafx.fxml"])
 }
 
 jlinkZip {
